Move greetings template into a properly named file.

--- a/chat-client/tools/public/design.html
+++ b/chat-client/tools/public/design.html
@@ -7,7 +7,7 @@
   <div class="section panel">
     <h2>chat-client</h2>
     <ul>
-      <li><a href="/design/chat-client.html">chat-client Page</a></li>
+      <li><a href="/design/greeting.html">greeting Page</a></li>
     </ul>
 
   </div>
